# yuanqiiii.github.io

./: .env.production  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  README.md  build.sh  config.mjs  generateArticlesData.js  package-lock.json  package.json  preprocess.py  preprocess_new.py  skip_list.txt
.github/workflows/: copilot-instructions.md  deploy.yml
api/: Cargo.toml
api/src/: main.rs
archive/: package.json
archive/docs/: 404.md
archive/scripts/: update-frontmatter.js
core/: api-examples.md  index.md  markdown-examples.md
core/.vitepress/: articlesData.js  config.mjs  posts.data.js  posts.data.ts  sidebarArticles.js  sidebarItems.js
core/components/: ArticleInfo.vue  ArticleList.vue  ArticleTags.vue  CategoryCards.vue  CodeBlock.vue  Effect.vue  ImageLightbox.vue  Maze.vue  RecentPosts.vue  Rotate.vue  RssSubscribe.vue  SearchBox.vue  ThemeToggle.vue  main.py
core/note/: about-new.md  about.md  friend.md  game.md  list.md
core/public/: rss.xml  sitemap.xml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  README.md  STRUCTURE.md  index.md
docs/.vitepress/: config.js
docs/content/: about.md  auto-generation.md  friend.md  list.md  markdown-demo.md  tags.md  timeline.md
docs/note/: index.md  list.md
docs/project/: index.md
docs/public/: articles.json  sitemap.xml  stats.json  tags.json  timeline.json
scripts/: generate-article-list.js  generateArticlesData.js  preprocess.py  watch-articles.js
zola-site/: config.toml
zola-site/content/: _index.md  about.md  auto-generation.md  friend.md  rust.md  (+4 more)
(+176 files in other folders)
